--- a/package.json
+++ b/package.json
@@ -4,11 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:dev": "tsc-watch --onSuccess \"node dist/main.js\"",
+    "format": "prettier 为typescrit 代码格式化工具",
+    "format":"prettier --write \"src/**/*.ts\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.6",
+    "@types/node": "^14.0.13",
+    "prettier": "^2.0.5",
+    "tsc-watch": "^4.2.8",
+    "typescript": "^3.9.5"
   }
 }
