--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,22 @@
+
+# compiled output
 node_modules/
+dist/
+
+# Logs
+logs
+*.log
+npm-debug.log*
+
+# OS
+
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/task.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# APP
+.env*
