--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start:dev": "tsc-watch --onSuccess \"node dist/main.js\"",
-    "format": "prettier 为typescrit 代码格式化工具",
-    "format":"prettier --write \"src/**/*.ts\""
+    "format": "prettier --write \"src/**/*.ts\""
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +15,7 @@
   "devDependencies": {
     "@types/express": "^4.17.6",
     "@types/node": "^14.0.13",
+    "dotenv": "^8.2.0",
     "prettier": "^2.0.5",
     "tsc-watch": "^4.2.8",
     "typescript": "^3.9.5"
