--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "@types/mysql2": "github:types/mysql2",
+    "express": "^4.17.1",
+    "lodash": "^4.17.15",
+    "mysql2": "^2.1.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.6",
+    "@types/lodash": "^4.14.157",
     "@types/node": "^14.0.13",
     "dotenv": "^8.2.0",
     "prettier": "^2.0.5",
