--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "license": "ISC",
   "dependencies": {
     "@types/mysql2": "github:types/mysql2",
+    "bcrypt": "^5.0.0",
     "express": "^4.17.1",
     "lodash": "^4.17.15",
     "mysql2": "^2.1.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.6",
     "@types/lodash": "^4.14.157",
     "@types/node": "^14.0.13",
